<resources>
    <string name="app_name">Android Hub</string>

    <string name="basket_module_name">Placar de Basquete</string>
    <string name="timer_period_label">Período %1$d/%2$d</string>
    <string name="timer_start">Iniciar</string>
    <string name="timer_pause">Pausar</string>
    <string name="timer_reset">Reset tempo</string>
    <string name="timer_next">Próximo</string>
    <string name="timer_apply_config">Aplicar Configuração</string>
    <string name="timer_config_applied">Configuração aplicada: %1$d períodos de %2$dmin</string>
    <string name="timer_pause_to_change">Pause o cronômetro para alterar a configuração</string>
    <string name="timer_invalid_config">Configuração inválida</string>
    <string name="timer_game_end">Fim do jogo!</string>
    <string name="timer_period_end">Período encerrado</string>
    <string name="history_undo">Jogada desfeita!</string>


    <string name="hint_time_a">Time A</string>
    <string name="hint_time_b">Time B</string>

    <string name="undo">Desfazer</string>
    <string name="reset_game">Reiniciar Partida</string>
    <string name="msg_reset_done">Placar reiniciado</string>
    <string name="history_waiting">Aguardando jogada...</string>
    <string name="history_last_play">Time %1$s marcou %2$d pontos</string>
    <string name="history_undone">Jogada desfeita!</string>

    <string name="calc_error">Erro</string>
    <string name="calc_div_zero">Divisão por zero</string>

    <string name="hub_title">Android Hub</string>
    <string name="hub_subtitle">Escolha uma aplicação</string>

    <string name="calculator_name">Calculadora Científica</string>
    <string name="calculator_desc">Operações avançadas e funções matemáticas</string>

    <string name="basket_desc">Controle de placar em tempo real</string>

    <string name="third_app_name">Pomodoro</string>
    <string name="third_app_desc">Gerencie seu tempo de foco</string>

    <string name="hub_eyebrow">seus módulos</string>
    <string name="hub_most_used">mais acessado</string>
    <string name="hub_open_module">Abrir módulo →</string>
</resources>